MODON MRE BPDEV/force-app/main/default/objects/Communication_Email_Setting__mdt/Communication_Email_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Communication Email Setting</label>
    <pluralLabel>Communication Email Settings</pluralLabel>
</CustomObject>