MODON MRE BPDEV/force-app/main/default/objects/Communication_Email_Setting__mdt/fields/OrgEmail__c.field-meta.xml
<CustomField>
    <fullName>OrgEmail__c</fullName>
    <label>Org Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>