MODON MRE BPDEV/force-app/main/default/objects/Communication_Email_Setting__mdt/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <label>Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>